----------------------------------------------------------------------
 OmegaT 3.1.9 update 3
----------------------------------------------------------------------
   0 Enhancement
   0 Bug fix
   1 Localisation update
----------------------------------------------------------------------
3.1.9 update 3 vs. 3.1.9 update 2

  Localisation updates:

  - New Norwegian localisation (UI, Instant start, scripts, readme)

----------------------------------------------------------------------
 OmegaT 3.1.9 update 2 (2015-06-03)
----------------------------------------------------------------------
   2 Enhancements
   3 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.1.9 update 2 vs. 3.1.9 update 1

  Other enhancements:

  - Updated LanguageTool to 2.2

  - *.strings (Mac OS X localisation format) was added to the Key=value 
filter. That's only a partial solution, as " and ; characters remain
in the translatable text, and have to be preserved by the translator.

  Bug fixes:

  - In the default source document exclusion patterns, "CVS" folders were
entered as "CSV"

  - Too many duplicate segments in the popup menu
  https://sourceforge.net/p/omegat/bugs/744/

  - Exclusion masks not working correctly under Windows 
  https://sourceforge.net/p/omegat/bugs/746/

  Localisation updates:

  - Brazilian Portuguese localisation updated to 3.0.7 (UI, documentation, readme)
  - Japanese localisation updated to 3.1.9 update 1 (UI)

----------------------------------------------------------------------
 OmegaT 3.1.9 update 1 (2015-04-15)
----------------------------------------------------------------------
   1 Enhancement
   3 Bug fixes
   0 Localisation update
----------------------------------------------------------------------
3.1.9 update 1 vs. 3.1.9

  Implemented requests:

  - Change auto-completion mode access keys 
  https://sourceforge.net/p/omegat/feature-requests/1073/

  Bug fixes:
  