@@ -38,7 +38,7 @@ import org.omegat.filters2.TranslationException;
 import org.omegat.filters3.xml.Handler;
 import org.omegat.filters3.xml.XMLContentBasedTag;
 import org.omegat.filters3.xml.XMLDialect;
-import org.omegat.util.PatternConsts;
+import org.omegat.filters3.xml.XMLText;
 import org.omegat.util.StaticUtils;
 import org.omegat.util.StringUtil;
 
@@ -553,8 +553,7 @@ public class Entry {
         int pos = 0;
         for (StaticUtils.TagOrder shortTag : shortTags) {
             if (pos < shortTag.pos) {
-                translatedEntry.add(getTextInstance()
-                        .createInstance(translation.substring(pos, shortTag.pos)));
+                translatedEntry.add(createTextInstance(translation.substring(pos, shortTag.pos)));
                 pos = shortTag.pos;
             }
             for (int j = getFirstGood(); j <= getLastGood(); j++) {
@@ -572,14 +571,23 @@ public class Entry {
             // warning.
         }
         if (pos < translation.length())
-            translatedEntry.add(getTextInstance().createInstance(translation.substring(pos)));
+            translatedEntry.add(createTextInstance(translation.substring(pos)));
 
         // /////////////////////////////////////////////////////////////////////
         // checking tags
         // TODO: implement checking
     }
 
-    class ShortTag {
+    private Text createTextInstance(String str) {
+        Text text = getTextInstance();
+        if (text != null) {
+            return text.createInstance(str);
+        } else {
+            return new XMLText(str, false);
+        }
+    }
+
+    static class ShortTag {
         String tag;
         int pos;
 
